@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.1 2012/12/02 01:21:50 cheusov Exp $
+# $NetBSD: Makefile,v 1.2 2012/12/05 22:52:16 dsainty Exp $
 #
 
 DISTNAME=	lirc-0.9.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	comms
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=lirc/}
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	cheusov@tut.by
+MAINTAINER=	cheusov@NetBSD.org
 HOMEPAGE=	http://www.lirc.org/
 COMMENT=	Linux Infrared Remote Control
 LICENSE=	gnu-gpl-v2
@@ -18,6 +18,11 @@ USE_TOOLS+=		gmake
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--with-syslog --with-driver=userspace
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
+
+# I don't want to see python in dependencies but
+# make pronto2lirc script usable if python is installed
+CONFIGURE_ENV+=			ac_cv_path_PYTHON=${PREFIX}/bin/python
+CHECK_INTERPRETER_SKIP+=	bin/pronto2lirc
 
 RCD_SCRIPTS=		lircd
 
