@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2012/08/13 14:00:03 pettai Exp $
+# $NetBSD: Makefile,v 1.23 2012/10/23 17:19:15 asau Exp $
 
-DISTNAME=	unbound-1.4.18
+DISTNAME=	unbound-1.4.19
 CATEGORIES=	net
 MASTER_SITES=	http://www.unbound.net/downloads/
 
